<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:weightSum="6"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitle"
            android:textStyle="bold"
            android:textSize="40dp"
            android:text="@string/Title"
            android:gravity="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeMessage"
            android:id="@+id/welcome"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPlayer"
            android:text="@string/newPlayer"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintName"
                android:id="@+id/newPlayerEditText"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addNameButton"
                android:id="@+id/addNewPlayer"
                android:onClick="addPlayer"/>
        </LinearLayout>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/start"
                android:text="@string/letsPlay"
                android:onClick="startGame"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/settings"
                android:text="@string/settings"
                android:onClick="startSettings"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/showDialog"
                android:text="@string/rulesButton"
                android:onClick="rulesDialog"
                android:layout_weight="1"

                />
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/players"
                android:orientation="vertical"
                >
            </LinearLayout>
        </ScrollView>



    </LinearLayout>
</LinearLayout>